// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters a list of repos appropriately 1`] = `
<ul
  className="repos"
>
  <Repo
    isProcessingId={null}
    key="666"
    onRepoClicked={[MockFunction]}
    repo={
      Object {
        "id": 666,
        "name": "Hydra/deathray",
      }
    }
  />
</ul>
`;

exports[`renders a list of repos appropriately 1`] = `
<ul
  className="repos"
>
  <Repo
    isProcessingId={null}
    key="1"
    onRepoClicked={[MockFunction]}
    repo={
      Object {
        "id": 1,
        "name": "Test repo",
        "owner": Object {
          "id": 1,
        },
      }
    }
  />
</ul>
`;

exports[`renders a list of repos appropriately 2`] = `
<ul
  className="repos"
>
  <Repo
    isProcessingId={null}
    key="1"
    onRepoClicked={[MockFunction]}
    repo={
      Object {
        "id": 1,
        "name": "Test repo",
        "owner": Object {
          "id": 1,
        },
      }
    }
  />
</ul>
`;
